cleaning and exploring data

--- a/Capstone Project Template.ipynb
+++ b/Capstone Project Template.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "# Project Title\n",
     "### Data Engineering Capstone Project\n",
     "\n",
     "#### Project Summary\n",
-    "--describe your project at a high level--\n",
+    "\n",
+    "Curious to explore the US immigration data insights? Lets dive in. In this project, the main data comes from the I94 Immigration data which contains the port the immigrant entered into US, using which means, airlines, flight number, arrival date, departure date, purpose of visit, visa type, and his personal info such as age, gender, nationality, occupation, etc. This data is combined with city demographics to analyze the preference of cities entering into US with the demographics. Furthermore, the airport codes data along with the immigration data provides a great way to analyze the traffic at each airports.\n",
+    "\n",
     "\n",
     "The project follows the follow steps:\n",
     "* Step 1: Scope the Project and Gather Data\n",
@@ -21,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Do all imports and installs here\n",
@@ -30,7 +36,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Step 1: Scope the Project and Gather Data\n",
     "\n",
@@ -44,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Read in the data here\n"
@@ -53,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -262,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "\t\n",
@@ -276,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "#write to parquet\n",
@@ -286,7 +302,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Step 2: Explore and Assess the Data\n",
     "#### Explore the Data \n",
@@ -299,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Performing cleaning tasks here\n",
@@ -310,7 +330,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Step 3: Define the Data Model\n",
     "#### 3.1 Conceptual Data Model\n",
@@ -322,7 +344,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "### Step 4: Run Pipelines to Model the Data \n",
     "#### 4.1 Create the data model\n",
@@ -332,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Write code here"
@@ -340,7 +366,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### 4.2 Data Quality Checks\n",
     "Explain the data quality checks you'll perform to ensure the pipeline ran as expected. These could include:\n",
@@ -354,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Perform quality checks here"
@@ -362,7 +392,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### 4.3 Data dictionary \n",
     "Create a data dictionary for your data model. For each field, provide a brief description of what the data is and where it came from. You can include the data dictionary in the notebook or in a separate file."
@@ -370,7 +402,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "#### Step 5: Complete Project Write Up\n",
     "* Clearly state the rationale for the choice of tools and technologies for the project.\n",
@@ -384,42 +418,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -444,5 +490,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
