adding exploring airport and demo

--- a/Preprocessing , Cleaning and Exploring/Cleaning the US I94 ports.ipynb
+++ b/Preprocessing , Cleaning and Exploring/Cleaning the US I94 ports.ipynb
@@ -123,8 +123,8 @@
     "df_I94_nonUS = pd.DataFrame({'code':I94_port_codes, \n",
     "                           'port': I94_ac, \n",
     "                           'locality': I94_city, \n",
-    "                           'state': I94_state, \n",
-    "                           'country': I94_country})"
+    "                           'province': I94_state, \n",
+    "                           'territory': I94_country})"
    ]
   },
   {
@@ -848,8 +848,8 @@
     "df_us = pd.DataFrame({'code':I94_port_codesX, \n",
     "                           'port': I94_acX, \n",
     "                           'locality': I94_cityX, \n",
-    "                           'state': I94_stateX, \n",
-    "                           'country': I94_countryX})"
+    "                           'province': I94_stateX, \n",
+    "                           'territory': I94_countryX})"
    ]
   },
   {
@@ -992,8 +992,8 @@
     "df_us = pd.DataFrame({'code':I94_port_codesX, \n",
     "                           'port': I94_acX, \n",
     "                           'locality': I94_cityX, \n",
-    "                           'state': I94_stateX, \n",
-    "                           'country': I94_countryX})"
+    "                           'province': I94_stateX, \n",
+    "                           'terrtitory': I94_countryX})"
    ]
   },
   {
@@ -1354,7 +1354,7 @@
    },
    "outputs": [],
    "source": [
-    "df_ports_valid_codes.to_csv('../Cleaned Data/I94_ports_code.csv', index=False)"
+    "# df_ports_valid_codes.to_csv('../Cleaned Data/I94_ports_code.csv', index=False)"
    ]
   }
  ],
