adding the exploration

--- a/Exploring the US_Cities_Demographics.ipynb
+++ b/Exploring the US_Cities_Demographics.ipynb
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 118,
    "metadata": {
     "editable": true
    },
@@ -1288,19 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "df_apc = df_apc.withColumn(\"province\", F.col(\"state\"))\n",
-    "df_apc = df_apc.drop(\"state\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 119,
    "metadata": {
     "editable": true
    },
@@ -1329,8 +1317,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>country</th>\n",
        "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1339,55 +1327,55 @@
        "      <td>CLG</td>\n",
        "      <td>None</td>\n",
        "      <td>Calgary</td>\n",
-       "      <td>Canada</td>\n",
        "      <td>Alberta</td>\n",
+       "      <td>Canada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>EDA</td>\n",
        "      <td>None</td>\n",
        "      <td>Edmonton</td>\n",
-       "      <td>Canada</td>\n",
        "      <td>Alberta</td>\n",
+       "      <td>Canada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>YHC</td>\n",
        "      <td>None</td>\n",
        "      <td>Hakai pass</td>\n",
-       "      <td>Canada</td>\n",
        "      <td>British Columbia</td>\n",
+       "      <td>Canada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>HAL</td>\n",
        "      <td>None</td>\n",
        "      <td>Halifax</td>\n",
-       "      <td>Canada</td>\n",
        "      <td>Nova Scotia</td>\n",
+       "      <td>Canada</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>MON</td>\n",
        "      <td>None</td>\n",
        "      <td>Montreal</td>\n",
-       "      <td>Canada</td>\n",
        "      <td>Quebec</td>\n",
+       "      <td>Canada</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  code  port    locality country          province\n",
-       "0  CLG  None     Calgary  Canada           Alberta\n",
-       "1  EDA  None    Edmonton  Canada           Alberta\n",
-       "2  YHC  None  Hakai pass  Canada  British Columbia\n",
-       "3  HAL  None     Halifax  Canada       Nova Scotia\n",
-       "4  MON  None    Montreal  Canada            Quebec"
+       "  code  port    locality          province territory\n",
+       "0  CLG  None     Calgary           Alberta    Canada\n",
+       "1  EDA  None    Edmonton           Alberta    Canada\n",
+       "2  YHC  None  Hakai pass  British Columbia    Canada\n",
+       "3  HAL  None     Halifax       Nova Scotia    Canada\n",
+       "4  MON  None    Montreal            Quebec    Canada"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "metadata": {
     "editable": true
    },
@@ -1419,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "metadata": {
     "editable": true
    },
@@ -1462,8 +1450,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>country</th>\n",
        "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1486,8 +1474,8 @@
        "      <td>JAN</td>\n",
        "      <td>Thompson Field - Jackson Airport</td>\n",
        "      <td>Jackson</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Mississippi</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1508,8 +1496,8 @@
        "      <td>DET</td>\n",
        "      <td>None</td>\n",
        "      <td>Detroit</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Michigan</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1530,8 +1518,8 @@
        "      <td>GAR</td>\n",
        "      <td>None</td>\n",
        "      <td>Gary</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Indiana</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1552,8 +1540,8 @@
        "      <td>BHX</td>\n",
        "      <td>None</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Alabama</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1574,8 +1562,8 @@
        "      <td>MEM</td>\n",
        "      <td>None</td>\n",
        "      <td>Memphis</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Tennessee</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1610,15 +1598,15 @@
        "3                 10  BHX                              None  Birmingham   \n",
        "4                 12  MEM                              None     Memphis   \n",
        "\n",
-       "         country     province  \n",
-       "0  Unites States  Mississippi  \n",
-       "1  Unites States     Michigan  \n",
-       "2  Unites States      Indiana  \n",
-       "3  Unites States      Alabama  \n",
-       "4  Unites States    Tennessee  "
+       "      province      territory  \n",
+       "0  Mississippi  Unites States  \n",
+       "1     Michigan  Unites States  \n",
+       "2      Indiana  Unites States  \n",
+       "3      Alabama  Unites States  \n",
+       "4    Tennessee  Unites States  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "metadata": {
     "editable": true
    },
@@ -1637,10 +1625,10 @@
     {
      "data": {
       "text/plain": [
-       "744"
+       "749"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "metadata": {
     "editable": true
    },
@@ -1662,7 +1650,7 @@
        "2891"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "metadata": {
     "editable": true
    },
@@ -1698,11 +1686,11 @@
        " 'code',\n",
        " 'port',\n",
        " 'locality',\n",
-       " 'country',\n",
-       " 'province']"
+       " 'province',\n",
+       " 'territory']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 127,
    "metadata": {
     "editable": true
    },
@@ -1721,45 +1709,23 @@
     {
      "data": {
       "text/plain": [
-       "135"
+       "DataFrame[City: string, State: string, territory: string, Median Age: double, Male Population: int, Female Population: int, Total Population: int, Number of Veterans: int, Foreign-born: int, Average Household Size: double, Race: string, Count: int, Race_percent_by_city: double, Race_rank_by_city: int, code: string]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_merged.select(\"City\",\"State\",\"country\").distinct().count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[City: string, State: string, country: string, Median Age: double, Male Population: int, Female Population: int, Total Population: int, Number of Veterans: int, Foreign-born: int, Average Household Size: double, Race: string, Count: int, Race_percent_by_city: double, Race_rank_by_city: int, code: string]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_merged.select(\"City\", \"State\", \"country\", \"Median Age\", \"Male Population\", \"Female Population\", \"Total Population\", \\\n",
+    "df_merged.select(\"City\", \"State\", \"territory\", \"Median Age\", \"Male Population\", \"Female Population\", \"Total Population\", \\\n",
     "         \"Number of Veterans\", \"Foreign-born\", \"Average Household Size\", \"Race\", \"Count\", \"Race_percent_by_city\",\\\n",
     "          \"Race_rank_by_city\", \"code\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 128,
    "metadata": {
     "editable": true
    },
@@ -1802,8 +1768,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>country</th>\n",
        "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1826,8 +1792,8 @@
        "      <td>JAN</td>\n",
        "      <td>Thompson Field - Jackson Airport</td>\n",
        "      <td>Jackson</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Mississippi</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1848,8 +1814,8 @@
        "      <td>DET</td>\n",
        "      <td>None</td>\n",
        "      <td>Detroit</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Michigan</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1870,8 +1836,8 @@
        "      <td>GAR</td>\n",
        "      <td>None</td>\n",
        "      <td>Gary</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Indiana</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1892,8 +1858,8 @@
        "      <td>BHX</td>\n",
        "      <td>None</td>\n",
        "      <td>Birmingham</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Alabama</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1914,8 +1880,8 @@
        "      <td>MEM</td>\n",
        "      <td>None</td>\n",
        "      <td>Memphis</td>\n",
-       "      <td>Unites States</td>\n",
        "      <td>Tennessee</td>\n",
+       "      <td>Unites States</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1950,15 +1916,15 @@
        "3                 10  BHX                              None  Birmingham   \n",
        "4                 12  MEM                              None     Memphis   \n",
        "\n",
-       "         country     province  \n",
-       "0  Unites States  Mississippi  \n",
-       "1  Unites States     Michigan  \n",
-       "2  Unites States      Indiana  \n",
-       "3  Unites States      Alabama  \n",
-       "4  Unites States    Tennessee  "
+       "      province      territory  \n",
+       "0  Mississippi  Unites States  \n",
+       "1     Michigan  Unites States  \n",
+       "2      Indiana  Unites States  \n",
+       "3      Alabama  Unites States  \n",
+       "4    Tennessee  Unites States  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1966,6 +1932,15 @@
    "source": [
     "df_merged.limit(5).toPandas()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
