--- a/Preprocessing , Cleaning and Exploring/Cleaning the US I94 ports.ipynb
+++ b/Preprocessing , Cleaning and Exploring/Cleaning the US I94 ports.ipynb
@@ -35,6 +35,28 @@
    "metadata": {
     "editable": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: us in /opt/conda/lib/python3.6/site-packages (2.0.2)\n",
+      "Requirement already satisfied: jellyfish==0.6.1 in /opt/conda/lib/python3.6/site-packages (from us) (0.6.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "\n",
+    "pip install us"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -44,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -59,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
@@ -87,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -114,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -129,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -158,8 +180,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>state</th>\n",
-       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -289,7 +311,7 @@
        "      <td>Beijing Capital International Airport</td>\n",
        "      <td>Beijing</td>\n",
        "      <td>Beijing</td>\n",
-       "      <td>Public Republic of China</td>\n",
+       "      <td>China</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -683,7 +705,7 @@
        "55  MAA                                                          Abu Dhabi   \n",
        "56  SAI                                                             Saipan   \n",
        "\n",
-       "                      state                   country  \n",
+       "                   province                 territory  \n",
        "0                   Alberta                    Canada  \n",
        "1                   Alberta                    Canada  \n",
        "2          British Columbia                    Canada  \n",
@@ -699,7 +721,7 @@
        "12                    Aruba             Neth Antilles  \n",
        "13         Central Thailand                  Thailand  \n",
        "14                   Oromia                  Ethiopia  \n",
-       "15                  Beijing  Public Republic of China  \n",
+       "15                  Beijing                     China  \n",
        "16              Saint Davis                   Bermuda  \n",
        "17             Cundinamarca                  Colombia  \n",
        "18                 La Plata                 Argentina  \n",
@@ -743,7 +765,7 @@
        "56                           Northern Mariana Islands  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -809,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -820,7 +842,7 @@
     "        temp = line.strip('\\n').split(\"\\t=\\t\")\n",
     "        I94_port_codesX.append(temp[0].strip(\"'\"))\n",
     "        exp = temp[1].strip().strip(\"'\").split(\",\")\n",
-    "        I94_countryX.append(\"Unites States\")\n",
+    "        I94_countryX.append(\"United States\")\n",
     "        I94_stateX.append(us.states.lookup(exp[-1].strip()).name)\n",
     "        I94_cityX.append(\" \".join([elem.capitalize() for elem in exp[-2].strip().split(\" \")]))\n",
     "        if len(exp)==3:\n",
@@ -839,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -854,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
@@ -883,8 +905,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>state</th>\n",
-       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -894,7 +916,7 @@
        "      <td></td>\n",
        "      <td>Alcan</td>\n",
        "      <td>Alaska</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -902,7 +924,7 @@
        "      <td></td>\n",
        "      <td>Anchorage</td>\n",
        "      <td>Alaska</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -910,7 +932,7 @@
        "      <td>Baker AAF</td>\n",
        "      <td>Baker Island</td>\n",
        "      <td>Alaska</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -918,7 +940,7 @@
        "      <td>Daltons Cache</td>\n",
        "      <td>Haines</td>\n",
        "      <td>Alaska</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -926,22 +948,22 @@
        "      <td>DEW Station</td>\n",
        "      <td>Point Lay</td>\n",
        "      <td>Alaska</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  code           port      locality   state        country\n",
-       "0  ALC                        Alcan  Alaska  Unites States\n",
-       "1  ANC                    Anchorage  Alaska  Unites States\n",
-       "2  BAR      Baker AAF  Baker Island  Alaska  Unites States\n",
-       "3  DAC  Daltons Cache        Haines  Alaska  Unites States\n",
-       "4  PIZ    DEW Station     Point Lay  Alaska  Unites States"
+       "  code           port      locality province      territory\n",
+       "0  ALC                        Alcan   Alaska  United States\n",
+       "1  ANC                    Anchorage   Alaska  United States\n",
+       "2  BAR      Baker AAF  Baker Island   Alaska  United States\n",
+       "3  DAC  Daltons Cache        Haines   Alaska  United States\n",
+       "4  PIZ    DEW Station     Point Lay   Alaska  United States"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
@@ -983,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -993,12 +1015,12 @@
     "                           'port': I94_acX, \n",
     "                           'locality': I94_cityX, \n",
     "                           'province': I94_stateX, \n",
-    "                           'terrtitory': I94_countryX})"
+    "                           'territory': I94_countryX})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -1027,8 +1049,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>state</th>\n",
-       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1038,7 +1060,7 @@
        "      <td></td>\n",
        "      <td>International Falls</td>\n",
        "      <td>Minnesota</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>537</th>\n",
@@ -1046,7 +1068,7 @@
        "      <td></td>\n",
        "      <td>International Falls</td>\n",
        "      <td>Minnesota</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>538</th>\n",
@@ -1084,15 +1106,15 @@
        "539  888  UNIDENTIFED AIR / SEAPORT  UNIDENTIFED AIR / SEAPORT   \n",
        "540  UNK                UNKNOWN POE                UNKNOWN POE   \n",
        "\n",
-       "                         state                    country  \n",
-       "536                  Minnesota              Unites States  \n",
-       "537                  Minnesota              Unites States  \n",
+       "                      province                  territory  \n",
+       "536                  Minnesota              United States  \n",
+       "537                  Minnesota              United States  \n",
        "538       NOT REPORTED/UNKNOWN       NOT REPORTED/UNKNOWN  \n",
        "539  UNIDENTIFED AIR / SEAPORT  UNIDENTIFED AIR / SEAPORT  \n",
        "540                UNKNOWN POE                UNKNOWN POE  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
@@ -1123,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "editable": true
    },
@@ -1152,8 +1174,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>state</th>\n",
-       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1202,15 +1224,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  code port    locality             state country\n",
-       "0  CLG          Calgary           Alberta  Canada\n",
-       "1  EDA         Edmonton           Alberta  Canada\n",
-       "2  YHC       Hakai pass  British Columbia  Canada\n",
-       "3  HAL          Halifax       Nova Scotia  Canada\n",
-       "4  MON         Montreal            Quebec  Canada"
+       "  code port    locality          province territory\n",
+       "0  CLG          Calgary           Alberta    Canada\n",
+       "1  EDA         Edmonton           Alberta    Canada\n",
+       "2  YHC       Hakai pass  British Columbia    Canada\n",
+       "3  HAL          Halifax       Nova Scotia    Canada\n",
+       "4  MON         Montreal            Quebec    Canada"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
@@ -1250,8 +1272,8 @@
        "      <th>code</th>\n",
        "      <th>port</th>\n",
        "      <th>locality</th>\n",
-       "      <th>state</th>\n",
-       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>territory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1261,7 +1283,7 @@
        "      <td></td>\n",
        "      <td>International Falls</td>\n",
        "      <td>Minnesota</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>594</th>\n",
@@ -1269,7 +1291,7 @@
        "      <td></td>\n",
        "      <td>International Falls</td>\n",
        "      <td>Minnesota</td>\n",
-       "      <td>Unites States</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>595</th>\n",
@@ -1307,15 +1329,15 @@
        "596  888  UNIDENTIFED AIR / SEAPORT  UNIDENTIFED AIR / SEAPORT   \n",
        "597  UNK                UNKNOWN POE                UNKNOWN POE   \n",
        "\n",
-       "                         state                    country  \n",
-       "593                  Minnesota              Unites States  \n",
-       "594                  Minnesota              Unites States  \n",
+       "                      province                  territory  \n",
+       "593                  Minnesota              United States  \n",
+       "594                  Minnesota              United States  \n",
        "595       NOT REPORTED/UNKNOWN       NOT REPORTED/UNKNOWN  \n",
        "596  UNIDENTIFED AIR / SEAPORT  UNIDENTIFED AIR / SEAPORT  \n",
        "597                UNKNOWN POE                UNKNOWN POE  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
