--- a/Preprocessing , Cleaning and Exploring/Exploring and Cleaning the Airport codes data.ipynb
+++ b/Preprocessing , Cleaning and Exploring/Exploring and Cleaning the Airport codes data.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {
     "editable": true
    },
@@ -162,16 +162,16 @@
     {
      "data": {
       "text/plain": [
-       "Country(alpha_2='GB', alpha_3='GBR', name='United Kingdom', numeric='826', official_name='United Kingdom of Great Britain and Northern Ireland')"
+       "Country(alpha_2='AE', alpha_3='ARE', name='United Arab Emirates', numeric='784')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyc.countries.get(alpha_2='GB')"
+    "pyc.countries.get(alpha_2='AE')"
    ]
   },
   {
