preserving schema in parquet

--- a/Exploring the US Immigration data.ipynb
+++ b/Exploring the US Immigration data.ipynb
@@ -1138,13 +1138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 172,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "df_s = spark.read.options(delimiter=\",\", header=\"true\")\\\n",
+    "df_s = spark.read.options(delimiter=\",\", header=\"true\", inferSchema=True)\\\n",
     "            .csv(\"immigration_data_sample.csv\")"
    ]
   },
