etl.py resolved issues

--- a/Exploring the US Immigration data.ipynb
+++ b/Exploring the US Immigration data.ipynb
@@ -4163,6 +4163,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "999"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_f.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "editable": true
